--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- Formulario de confirmación -->
-        <form id="confirmForm" class="confirmation-form">
+        <form id="confirmacionForm" class="confirmation-form">
             <div class="form-group">
                 <label for="nombre">Tu nombre completo</label>
                 <div class="input-container">
@@ -88,7 +88,7 @@
                 </label>
             </div>
 
-            <button type="submit" class="submit-btn">
+            <button type="submit" id="submitBtn" class="submit-btn">
                 <i class="fas fa-paper-plane"></i>
                 Confirmar Asistencia
             </button>
