--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,17 @@
             </div>
         </div>
 
+        <!-- Nota especial -->
+        <div class="special-note">
+            <div class="note-icon">
+                <i class="fas fa-university"></i>
+            </div>
+            <div class="note-content">
+                <span class="note-label">¡IMPORTANTE!</span>
+                <span class="note-text">El 13 de Agosto a las 16 horas aproximadamente estaremos rindiendo en la UNSTA</span>
+            </div>
+        </div>
+
         <!-- Formulario de confirmación -->
         <form id="confirmacionForm" class="confirmation-form">
             <div class="form-group">
