--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="note-content">
                 <span class="note-label">¡IMPORTANTE!</span>
-                <span class="note-text">El 13 de Agosto a las 17 horas aproximadamente estaremos rindiendo en la UNSTA</span>
+                <span class="note-text">El 13 de Agosto a las 17 horas aproximadamente estaremos rindiendo en la <a href="https://maps.google.com/?q=Universidad+del+Norte+Santo+Tomás+de+Aquino,+Tucumán,+Argentina" target="_blank" class="unsta-link">UNSTA</a></span>
             </div>
         </div>
 
